crates/ir/tests/snapshots/lower_test__data_types__match_nested.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module data_types__match_nested

type List[a] = Cons#0(a, List[a]) | Nil#1
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[y8]): List[y8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]

fn sum_first_two(v0: List[Int]) -> Int =
  switch v0 {
    0 (v1: Int, v2: List[a]) ->
      switch v2 {
        0 (v3: Int, v4: List[Int]) ->
          let v5: Int = add_int(v1, v3)
          v5
        _ ->
          0
      }
    _ ->
      0
  }
