crates/ir/tests/snapshots/lower_test__data_types__match_option.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module data_types__match_option

type Option[a] = Some#0(a) | None#1
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]

fn unwrap_or(v0: Option[q8], v1: q8) -> q8 =
  switch v0 {
    0 (v2: q8) ->
      v2
    1 ->
      v1
  }
