crates/ir/tests/snapshots/lower_test__data_types__nested_patterns.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module data_types__nested_patterns

type Option[a] = Some#0(a) | None#1
type List[b] = Cons#0(b, List[b]) | Nil#1
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]

fn unwrap_nested(v0: Option[Option[Int]]) -> Int =
  switch v0 {
    0 (v1: a) ->
      switch v1 {
        0 (v2: Int) ->
          v2
        1 ->
          0
      }
    1 ->
      0
  }

fn first_two(v3: List[Int]) -> Int =
  switch v3 {
    0 (v4: Int, v5: List[b]) ->
      switch v5 {
        0 (v6: Int, v7: List[b]) ->
          let v8: Int = add_int(v4, v6)
          v8
        _ ->
          0
      }
    _ ->
      0
  }
